# tns-contract

./: .env.example  .gitignore  Anchor.toml  README.md  Surfpool.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  txtx.yml
app/: demo.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
docs/: COLLISION_DECISIONS.md  PARTNERSHIP_STRATEGY.md  SYMBOL_COLLISION_RFC.md  whitepaper.md
index_constituents/: dow.json  nasdaq100.json  russell3000.json  sp400.json  sp500.json  (+1 more)
programs/tns/: Cargo.toml
programs/tns/src/: constants.rs  errors.rs  events.rs  lib.rs  utils.rs
programs/tns/src/instructions/: mod.rs
programs/tns/src/instructions/admin/: admin_close_symbol.rs  admin_update_symbol.rs  initialize.rs  mod.rs  seed_symbol.rs  update_config.rs
programs/tns/src/instructions/registrar/: cancel_symbol.rs  claim_ownership.rs  mod.rs  transfer_ownership.rs  verify_or_close.rs
programs/tns/src/instructions/registrar/claim/: mod.rs  sol.rs  tns.rs  usdc.rs  usdt.rs
programs/tns/src/instructions/registrar/helpers/: mod.rs  payment.rs  symbol.rs  validation.rs
programs/tns/src/instructions/registrar/register/: mod.rs  sol.rs  tns.rs  usdc.rs  usdt.rs
programs/tns/src/instructions/registrar/renew/: mod.rs  sol.rs  tns.rs  usdc.rs  usdt.rs
programs/tns/src/instructions/registrar/update_mint/: mod.rs  sol.rs  tns.rs  usdc.rs  usdt.rs
programs/tns/src/state/: config.rs  mod.rs  token.rs
programs/tns/src/symbol_status/: mod.rs  reserved.rs  status.rs
programs/tns/src/whitelist/: data.rs  mod.rs  reserved.rs  status.rs
(+62 files in other folders)
