[package]
name = "tns"
version = "0.1.0"
description = "Token Naming Service - Unique symbol registry for SPL tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tns"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022", "token_2022_extensions"] }
phf = { version = "0.11", features = ["macros"] }
mpl-token-metadata = "5.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
